Fix castling